WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85891
WKContextSetCacheModel(contextref, kWKCacheModelDocumentViewer) doesn't prevent pages from going into the PageCache
https://bugs.webkit.org/show_bug.cgi?id=85891
Summary
WKContextSetCacheModel(contextref, kWKCacheModelDocumentViewer) doesn't preve...
Jessie Berlin
Reported
2012-05-08 09:23:54 PDT
Instead, pages go into the page cache only to come out as soon as the first purge is done. If m_capacity is 0, PageCache::canCache should return false immediately. I have a fix, but I am blocked on
https://bugs.webkit.org/show_bug.cgi?id=85888
for the ability to test it (since currently the WK2 API for determining when something goes into or out of the page cache is broken).
Attachments
Patch
(11.28 KB, patch)
2012-05-15 10:02 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2012-05-15 10:02:50 PDT
Created
attachment 141990
[details]
Patch
Jessie Berlin
Comment 2
2012-05-15 12:05:32 PDT
Comment on
attachment 141990
[details]
Patch Committed in
http://trac.webkit.org/changeset/117112
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug